--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,8 +11,9 @@
 }
 
 body {
+  background-image: url("http://clipart-library.com/clipart/209364.htm");
   background-color: #E6E6FA;
-}
+   }
 
 h1 {
   background-color: #9370DB;
